# Q-T_lib

./: .gitignore  CMakeLists.txt  Q-T_lib.spec  check_dates.py  cli.py  gui.py  main.py  readme.md  requirements.txt
analysis/: performance_analyzer.py
config/: settings.py
core/: pnl_calculator.py
data/: data_loader.py
strategies/: base_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  rsi_strategy.py
tests/: test_data_loader.py  test_performance_analyzer.py  test_pnl_calculator.py  test_strategies.py
